--- a/Bootstrap/Starter/index.html
+++ b/Bootstrap/Starter/index.html
@@ -77,6 +77,88 @@
         </div>
       </div>
     </section>
+    <section class="container-fluid px-0 content">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="imgs/milk.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 special mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                src="imgs/lolli_icon.png"
+                alt=""
+                class="img-fluid d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                doloremque rerum enim nam blanditiis. Repellat sed eum
+                voluptatem reiciendis illum laborum at et quasi debitis
+                veritatis, repellendus consequatur velit repudiandae corrupti,
+                sit quaerat error eos labore dolore adipisci earum fugiat esse
+                id! Esse laborum totam molestiae id inventore temporibus
+                deserunt.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid px-0 content">
+      <div class="row align-items-center">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 special mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                src="imgs/lolli_icon.png"
+                alt=""
+                class="img-fluid d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                doloremque rerum enim nam blanditiis. Repellat sed eum
+                voluptatem reiciendis illum laborum at et quasi debitis
+                veritatis, repellendus consequatur velit repudiandae corrupti,
+                sit quaerat error eos labore dolore adipisci earum fugiat esse
+                id! Esse laborum totam molestiae id inventore temporibus
+                deserunt.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid" src="imgs/gumball.png" alt="" />
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="imgs/sprinkles.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 special mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                src="imgs/lolli_icon.png"
+                alt=""
+                class="img-fluid d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                doloremque rerum enim nam blanditiis. Repellat sed eum
+                voluptatem reiciendis illum laborum at et quasi debitis
+                veritatis, repellendus consequatur velit repudiandae corrupti,
+                sit quaerat error eos labore dolore adipisci earum fugiat esse
+                id! Esse laborum totam molestiae id inventore temporibus
+                deserunt.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -92,5 +174,13 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script>
+      $(function () {
+        $(document).scroll(function () {
+          var $nav = $("#mainNavbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
   </body>
 </html>
