--- a/Javascript/eventHandling/inlineEvents.html
+++ b/Javascript/eventHandling/inlineEvents.html
@@ -8,7 +8,8 @@
   <body>
     <h1>Events</h1>
     <button onclick="alert('nice click')">Click</button>
-    <button id="btn">Click 2</button>
+    <button id="btn2">Click 2</button>
+    <button id="btn3">Click 3</button>
     <script src="inlineEvents.js"></script>
   </body>
 </html>
