created a todo list

--- a/Javascript/eventHandling/preventDefault.html
+++ b/Javascript/eventHandling/preventDefault.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <form action="/some-database">
+      <input type="text" name="" id="text" />
       <button type="submit">Submit</button>
+      <ul id="list"></ul>
       <script src="preventDefault.js"></script>
     </form>
   </body>
