--- a/Javascript/AJAX and APIs/index.html
+++ b/Javascript/AJAX and APIs/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="XHR.js"></script>
+    <script src="fetch.js"></script>
   </body>
 </html>
