DOM manipulation and axios

--- a/Javascript/AJAX and APIs/axios.html
+++ b/Javascript/AJAX and APIs/axios.html
@@ -6,6 +6,9 @@
     <title>Axios</title>
   </head>
   <body>
+    <h1>Click to get new joke</h1>
+    <button>Click</button>
+    <ul id="jokes"></ul>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="axios.js"></script>
   </body>
