displaying image of the 1st search result

--- a/Javascript/AJAX and APIs/TVShowSearch/index.html
+++ b/Javascript/AJAX and APIs/TVShowSearch/index.html
@@ -6,6 +6,11 @@
     <title>TV Show Search App</title>
   </head>
   <body>
+    <h1>TV Show Search</h1>
+    <form id="searchForm">
+      <input type="text" placeholder="TV Show Title" name="query" />
+      <button>Search</button>
+    </form>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="app.js"></script>
   </body>
