--- a/Javascript/OOPS and JS/index.html
+++ b/Javascript/OOPS and JS/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="factoryfunctions.js"></script>
+    <script src="constructor.js"></script>
   </body>
 </html>
